<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.4</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.teenthofabud.wizard.nandifoods</groupId>
	<artifactId>wms</artifactId>
	<version>0.1.11-SNAPSHOT</version>
	<name>nandi-foods-service-manager</name>
	<description>Inventory and Invoice management system</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>21</java.version>
		<blaze-persistence.version>1.6.15-SNAPSHOT</blaze-persistence.version>
		<itext.version>9.0.0</itext.version>
	</properties>
	<dependencies>
		<!--<dependency>
			<groupId>com.blazebit</groupId>
			<artifactId>blaze-persistence-integration-spring-data-3.3</artifactId>
			<version>${blaze-persistence.version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.blazebit</groupId>
			<artifactId>blaze-persistence-integration-hibernate-6.2</artifactId>
			<version>${blaze-persistence.version}</version>
			<scope>runtime</scope>
		</dependency>-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<!--<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>-->
		<!--<dependency>
			<groupId>net.sf.jasperreports</groupId>
			<artifactId>jasperreports</artifactId>
			<version>7.0.1</version>
		</dependency>-->
		<dependency>
			<groupId>com.itextpdf</groupId>
			<artifactId>itext-core</artifactId>
			<version>${itext.version}</version>
			<type>pom</type>
		</dependency>
		<!-- always needed -->
		<dependency>
			<groupId>com.itextpdf</groupId>
			<artifactId>kernel</artifactId>
			<version>${itext.version}</version>
		</dependency>

		<!-- always needed -->
		<dependency>
			<groupId>com.itextpdf</groupId>
			<artifactId>io</artifactId>
			<version>${itext.version}</version>
		</dependency>

		<!-- always needed -->
		<dependency>
			<groupId>com.itextpdf</groupId>
			<artifactId>layout</artifactId>
			<version>${itext.version}</version>
		</dependency>

		<!-- always needed -->
		<dependency>
			<groupId>com.itextpdf</groupId>
			<artifactId>bouncy-castle-adapter</artifactId>
			<version>${itext.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jodd</groupId>
			<artifactId>jodd-util</artifactId>
			<version>6.3.0</version>
		</dependency>
<!--		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-jdk8</artifactId>
			<version>2.13.3</version>
		</dependency>-->
		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-jsr310</artifactId>
		</dependency>
		<dependency>
			<groupId>com.github.java-json-tools</groupId>
			<artifactId>json-patch</artifactId>
			<version>1.13</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.javers/javers-core -->
		<dependency>
			<groupId>org.javers</groupId>
			<artifactId>javers-core</artifactId>
			<version>7.6.3</version>
		</dependency>
		<dependency>
			<groupId>com.diffplug.durian</groupId>
			<artifactId>durian</artifactId>
			<version>3.3.0</version>
		</dependency>
		<dependency>
			<groupId>com.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<version>5.9</version>
		</dependency>

		<!--		<dependency>
                    <groupId>com.github.java-json-tools</groupId>
                    <artifactId>json-patch</artifactId>
                    <version>1.13</version>
                </dependency>-->
		<!-- https://mvnrepository.com/artifact/org.apache.johnzon/johnzon-core -->
		<!-- https://mvnrepository.com/artifact/com.github.wnameless.json/json-flattener -->
<!--		<dependency>
			<groupId>com.github.wnameless.json</groupId>
			<artifactId>json-flattener</artifactId>
			<version>0.17.0</version>
		</dependency>-->
		<dependency>
			<groupId>org.reflections</groupId>
			<artifactId>reflections</artifactId>
			<version>0.10.2</version>
		</dependency>
		<dependency>
			<groupId>io.hypersistence</groupId>
			<artifactId>hypersistence-utils-hibernate-63</artifactId>
			<version>3.8.0</version>
		</dependency>
		<dependency>
			<groupId>com.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<version>5.9</version>
			<exclusions>
				<exclusion>
					<groupId>commons-logging</groupId>
					<artifactId>commons-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>2.6.0</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate.validator</groupId>
			<artifactId>hibernate-validator</artifactId>
			<version>8.0.1.Final</version>
		</dependency>
		<dependency>
			<groupId>javax.measure</groupId>
			<artifactId>unit-api</artifactId>
			<version>2.2</version>
		</dependency>
		<dependency>
			<groupId>tech.units</groupId>
			<artifactId>indriya</artifactId>
			<version>2.2</version>
		</dependency>
		<dependency>
			<groupId>systems.uom</groupId>
			<artifactId>systems-unicode</artifactId>
			<version>2.1</version>
		</dependency>
		<dependency>
			<groupId>systems.uom</groupId>
			<artifactId>systems-common</artifactId>
			<version>2.1</version>
		</dependency>
		<dependency>
			<groupId>systems.uom</groupId>
			<artifactId>systems-quantity</artifactId>
			<version>2.1</version>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<!--<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>-->
	</dependencies>

	<build>
		<finalName>${project.artifactId}</finalName>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<jvmArguments>--enable-preview</jvmArguments>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>

				</configuration>
			</plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
	</build>

</project>
